# PrepPy

./: .gitignore  =0.22.1  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: .build 2.yml.icloud  .release 2.yml.icloud  build.yml  release.yml
PrepPy/: PrepPy.py  data_type.py  datatype.py  onehot.py  scaler.py  train_valid_test_split.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: PrepPy.rst  modules.rst  preppy524.rst
preppy524/: datatype.py  onehot.py  scaler.py
tests/: test_PrepPy.py  test_data_type.py  test_datatype.py  test_onehot.py  test_scaler.py  test_train_test_valid_split.py  test_train_valid_test_split.py  train_valid_test_split.py
