[tool.poetry]
name = "preppy"
version = "0.1.0"
description = "Python package to preprocess data"
authors = ["Chimaobi Amadi <maobiamadi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
pandas = "^1.0.1"
numpy = "^1.18.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"