[tool.poetry]
name = "preppy"
version = "0.1.1"
description = "Python package to preprocess data"
authors = ["Chimaobi Amadi <maobiamadi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
pandas = "^1.0.1"
numpy = "^1.18.1"
sklearn = "^0.0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.4.1"
python-semantic-release = "^4.10.0"

  [tool.semantic_release]
 version_variable = "PrepPy/__init__.py:__version__"
 version_source = "commit"
 upload_to_pypi = "false"
 patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"